feat(proxy): use java21 grammar